Working on variations of product

--- a/Django_eCommerce/templates/store/product_detail.html
+++ b/Django_eCommerce/templates/store/product_detail.html
@@ -26,20 +26,10 @@
 							<div class="row">
 								<div class="item-option-select">
 									<h6>Choose Color</h6>
-									<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-										<label class="btn btn-light">
-											<input type="radio" name="radio_color"> Silver
-										</label>
-										<label class="btn btn-light">
-											<input type="radio" name="radio_color" > Gray
-										</label>
-										<label class="btn btn-light active">
-											<input type="radio" name="radio_color checked"> Gold
-										</label>
-										<label class="btn btn-light">
-											<input type="radio" name="radio_color"> Black
-										</label>
-									</div> 
+									<select name="color" class="form-control" required>
+										{% for i in single_product.variation_set.all %}
+										<option value="{{ i.variation_value }}">{{ i.variation_value }}</option>
+										{% endfor %}
 								</div>
 							</div> <!-- row.// -->
 							<div class="row">
